--- a/dashboard.html
+++ b/dashboard.html
@@ -5,141 +5,322 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="game.css">
   <script src="items.js"></script>
+  <style>
+    .stats-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .stat-card {
+      background:#1e1e1e;
+      border:1px solid #333;
+      border-radius: 10px;
+      padding:15px;
+      text-align:center;
+    }
+    .stat-card h3 { margin:0 0 5px;color:#FFD700;}
+    .stat-card p { font-size:1.3em;font-weight:bold;margin:0;color:#eee;}
+    .player-id { font-size:1.3em;font-weight:bold;color:#e60000;margin-bottom:15px; }
+    #overview p { font-size:1.5em;font-weight:bold;margin:10px 0; }
+    #overviewName { color:#FFD700; }
+    #overviewMoney { color:#00cc00; }
+    #overview .money-icon { width:28px;height:28px;vertical-align:middle;margin-right:6px;}
+    .version-label { position:fixed;right:15px;bottom:10px;font-size:0.9em;color:#555;opacity:0.7;font-style:italic;}
+
+    .inventory-layout { display:flex; gap:20px; }
+    .inventory-left, .inventory-right {
+      flex:1; background:#1c1c1c; border:1px solid #333; border-radius:8px; padding:15px;
+    }
+    .inventory-left h2, .inventory-right h2 { color:#FFD700; margin-top:0; }
+    .inventory-stats ul { list-style:none; padding:0; margin:0; }
+    .inventory-stats li { margin:5px 0; font-weight:bold; color:#eee; }
+    .inventory-stats span { color:#00ccff; }
+
+    #xpBarOuter { background:#333;border-radius:6px;height:18px;margin-top:8px;}
+    #xpBarInner { background:#00ccff;height:100%;width:0%;border-radius:6px;transition:width 0.3s;}
+    #xpDisplay { font-size:0.9em; color:#ccc; }
+
+    /* ICON alignment polish + star fix */
+    .inventory-stats li {
+      display: flex;
+      align-items: center;
+      margin: 8px 0;
+    }
+    .inventory-stats li img.stat-icon,
+    .inventory-stats li #mana-icon {
+      width: 35px;
+      height: 35px;
+      flex-shrink: 0;
+      margin-right: 10px;
+      object-fit: contain;
+      display: block;
+    }
+    #mana-icon,
+    .stat-icon[src*="slash-resistance"] {
+      transform: scale(1.15);
+    }
+    .stat-icon[src*="armor"],
+    .stat-icon[src*="health"] {
+      transform: scale(0.9);
+    }
+    .inventory-stats li span {
+      margin-left: 4px;
+      color:#00ccff;
+      font-weight:bold;
+    }
+    .align-star {
+      width: 18px !important;
+      height: 18px !important;
+      margin-right: 5px;
+      flex-shrink: 0;
+      position: relative;
+      top: 2px;
+      transform: none !important;
+    }
+  </style>
 </head>
 <body>
-  <div class="dashboard-layout">
-
-    <!-- Sidebar -->
-    <aside class="sidebar">
-      <div class="profile">
-        <div class="pfp-container">
-          <img id="pfp" src="images/agent.png" alt="Profile Picture">
-        </div>
-        <input type="file" id="pfpUpload" accept="image/*" style="display:none;" onchange="setPfp(event)">
-        <h2 id="playerName"></h2>
-        <p>
-          <img class="money-icon" src="images/money.png" alt="Money">
-          <span id="money"></span>
-        </p>
+<div class="dashboard-layout">
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <div class="profile">
+      <div class="pfp-container">
+        <img id="pfp" src="images/agent.png" alt="Profile Picture">
       </div>
-
-      <nav class="menu">
-        <button onclick="showSection('overview')">🏠 Overview</button>
-        <button onclick="showSection('inventory')">🎒 Inventory</button>
-        <button onclick="showSection('quests')">⚔️ Quests</button>
-        <button onclick="window.location.href='store.html'">🏬 Stores</button>
-        <button onclick="window.location.href='market.html'">🏦 Marketplace</button>
-        <button class="logout-btn" onclick="logout()">🚪 Logout</button>
-      </nav>
-    </aside>
-
-    <!-- Main Content -->
-    <main class="content">
-      <div id="overview" class="section">
-        <h1>Player Overview</h1>
-        <p><b>Name:</b> <span id="overviewName"></span></p>
-        <p><b>Money:</b> <img class="money-icon" src="images/money.png"> <span id="overviewMoney"></span></p>
-      </div>
-
-      <div id="inventory" class="section" style="display:none;">
-        <h1>Your Inventory</h1>
-        <ul id="inventoryList" class="inventory-list"></ul>
-      </div>
-
-      <div id="quests" class="section" style="display:none;">
-        <h1>Quests</h1>
-        <button class="btn gold" id="questBtn" onclick="startQuest()">⚔️ Embark on Quest</button>
-        <div id="questStatus" class="quest-status"></div>
-      </div>
-    </main>
-  </div>
-
-  <!-- Popup overlay -->
-  <div id="popupOverlay" class="popup-overlay" style="display:none;">
-    <div class="popup-box">
-      <p id="popupMessage"></p>
-      <div id="popupButtons" class="popup-buttons"></div>
+      <input type="file" id="pfpUpload" accept="image/*" style="display:none;" onchange="setPfp(event)">
+      <h2 id="playerName"></h2>
+      <p><img class="money-icon" src="images/money.png"><span id="money"></span></p>
     </div>
+    <nav class="menu">
+      <button onclick="showSection('overview')">🏠 Overview</button>
+      <button onclick="showSection('inventory')">🎒 Inventory</button>
+      <button onclick="window.location.href='dungeons.html'">⚔️ Dungeons</button>
+      <button onclick="showSection('quests')">📜 Quests</button>
+      <button onclick="window.location.href='dealers.html'">🏬 Stores</button>
+      <button onclick="window.location.href='market.html'">🏦 Marketplace</button>
+      <button class="logout-btn" onclick="logout()">🚪 Logout</button>
+    </nav>
+  </aside>
+
+  <!-- Main Content -->
+  <main class="content">
+    <!-- Overview -->
+    <div id="overview" class="section">
+      <p class="player-id">Player ID: <span id="playerID">0000000000</span></p>
+      <h1>Player Overview</h1>
+      <p><b>Name:</b> <span id="overviewName"></span></p>
+      <p><b>Money:</b> <img class="money-icon" src="images/money.png"> <span id="overviewMoney"></span></p>
+      <div class="stats-grid">
+        <div class="stat-card"><h3>🏰 Dungeons Done</h3><p id="statDone">0</p></div>
+        <div class="stat-card"><h3>💀 Dungeons Failed</h3><p id="statFailed">0</p></div>
+        <div class="stat-card"><h3>📜 Quests Completed</h3><p id="statQuests">0</p></div>
+        <div class="stat-card"><h3>💰 Money Earned</h3><p id="statEarned">0</p></div>
+      </div>
+    </div>
+
+    <!-- Inventory -->
+    <div id="inventory" class="section" style="display:none;">
+      <h1>Character Inventory</h1>
+      <div class="inventory-layout">
+        <!-- LEFT: Stats & Level -->
+        <div class="inventory-left">
+          <h2>Stats</h2>
+          <div class="inventory-stats">
+            <ul>
+              <li><img src="images/health.png" class="stat-icon"> Health:<span id="statHealth">100</span></li>
+              <li><img id="mana-icon" src="images/mana.png" class="stat-icon"> Mana:<span id="statMana">100</span></li>
+              <li><img src="images/armor.png" class="stat-icon"> Armor:<span id="statArmor">0</span></li>
+              <li><img src="images/slash-resistance.png" class="stat-icon"> Slash Resistance:<span id="statSlash">0</span></li>
+              <li><img src="images/magic-resistance.png" class="stat-icon"> Magic Resistance:<span id="statMagic">0</span></li>
+              <li><img src="images/projectile-resistance.png" class="stat-icon"> Projectile Resistance:<span id="statProj">0</span></li>
+            </ul>
+          </div>
+          <div class="stat-card">
+            <h3><img src="images/star.png" class="stat-icon align-star"> Level</h3>
+            <p id="statLevel">1</p>
+            <div id="xpBarOuter"><div id="xpBarInner"></div></div>
+            <small><span id="xpDisplay">0 / 100</span> XP</small>
+          </div>
+          <button class="btn gold" style="margin-top:10px" onclick="addXP(500)">⚡ Give 500 XP (Test)</button>
+          <button class="btn green" style="margin-top:10px" onclick="addMoney(100)">💰 Give 100 Money (Test)</button>
+        </div>
+        <!-- RIGHT: Items -->
+        <div class="inventory-right">
+          <h2>All Items</h2>
+          <ul id="inventoryList" class="inventory-list"></ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Quests -->
+    <div id="quests" class="section" style="display:none;">
+      <h1>Quests</h1>
+      <p>Here you’ll see side quests and tasks.</p>
+      <button class="btn green" onclick="addXP(20)">📜 Complete Small Quest (+20 XP)</button>
+    </div>
+  </main>
+</div>
+
+<!-- Popup -->
+<div id="popupOverlay" class="popup-overlay" style="display:none;">
+  <div class="popup-box">
+    <p id="popupMessage"></p>
+    <div id="popupButtons" class="popup-buttons"></div>
   </div>
+</div>
 
-  <script>
-    let player;
+<div class="version-label">v0.18</div>
 
-    function formatNumber(num){ return num.toLocaleString(); }
+<script>
+  let player;
 
-    function showPopup(message,type="info",buttons=[]){
-      const overlay=document.getElementById("popupOverlay"),
-            msg=document.getElementById("popupMessage"),
-            btns=document.getElementById("popupButtons");
-      msg.innerText=message; btns.innerHTML="";
-      if(buttons.length>0){
-        buttons.forEach(b=>{
-          const button=document.createElement("button");
-          button.className="btn "+b.class; button.innerText=b.text;
-          button.onclick=()=>{ closePopup(); b.onClick&&b.onClick();};
-          btns.appendChild(button);
-        });
-      } else {
-        const ok=document.createElement("button");
-        ok.className="btn gold"; ok.innerText="OK";
-        ok.onclick=()=>closePopup(); btns.appendChild(ok);
+  function formatNumber(num){ return num.toLocaleString(); }
+
+  // Popups
+  function showPopup(message,type="info"){
+    const overlay=document.getElementById("popupOverlay"),
+          msg=document.getElementById("popupMessage"),
+          btns=document.getElementById("popupButtons");
+    let icon="";
+    if(type==="success") icon="<img src='images/yes.png' style='width:20px;margin-right:6px'>";
+    if(type==="error")   icon="<img src='images/no.png' style='width:20px;margin-right:6px'>";
+    msg.innerHTML=icon+message;
+    btns.innerHTML="";
+    const ok=document.createElement("button");
+    ok.className="btn gold"; ok.innerText="OK"; ok.onclick=()=>closePopup();
+    btns.appendChild(ok);
+    overlay.style.display="flex";
+    overlay.className="popup-overlay "+type;
+  }
+  function closePopup(){ document.getElementById("popupOverlay").style.display="none"; }
+
+  function getItemIcon(itemName){
+    const fileName=itemName.toLowerCase().replace(/\s+/g,"-")+".png";
+    return "images/"+fileName;
+  }
+
+  // XP + Levels
+  function addXP(amount){
+    player.xp += amount;
+    while(player.xp >= player.nextLevelXp){
+      player.xp -= player.nextLevelXp;
+      player.level++;
+      player.nextLevelXp = Math.floor(player.nextLevelXp*1.25);
+      showPopup(`Level Up! You are now Level ${player.level}`,"success");
+    }
+    savePlayer(); updateXPUI();
+  }
+  function updateXPUI(){
+    document.getElementById("statLevel").innerText=player.level;
+    document.getElementById("xpDisplay").innerText=`${player.xp} / ${player.nextLevelXp}`;
+    const percent=Math.floor((player.xp/player.nextLevelXp)*100);
+    document.getElementById("xpBarInner").style.width=percent+"%";
+  }
+  function updateStatsUI(){
+    document.getElementById("statHealth").innerText=player.stats.health;
+    document.getElementById("statMana").innerText=player.stats.mana;
+    document.getElementById("statArmor").innerText=player.stats.armor;
+    document.getElementById("statSlash").innerText=player.stats.slashRes;
+    document.getElementById("statMagic").innerText=player.stats.magicRes;
+    document.getElementById("statProj").innerText=player.stats.projRes;
+  }
+
+  // Equip & Unequip
+  function equipItem(itemName){
+    const item=player.inventory.find(i=>i.item===itemName);
+    const def=ITEMS.find(it=>it.name===itemName);
+    if(!item||!def) return;
+    // Unequip old in same slot
+    player.inventory.forEach(it=>{
+      const d=ITEMS.find(dd=>dd.name===it.item);
+      if(d&&d.slot===def.slot){ it.equipped=false; }
+    });
+    item.equipped=true;
+    savePlayer(); renderInventory(); updateStatsFromEquipment();
+  }
+
+  function unequipItem(itemName){
+    const item=player.inventory.find(i=>i.item===itemName);
+    if(!item) return;
+    item.equipped=false;
+    savePlayer(); renderInventory(); updateStatsFromEquipment();
+  }
+
+  function updateStatsFromEquipment(){
+    player.stats={health:100,mana:100,armor:0,slashRes:0,magicRes:0,projRes:0};
+    player.inventory.forEach(it=>{
+      if(it.equipped){
+        const def=ITEMS.find(d=>d.name===it.item);
+        if(def&&def.stats){ for(let s in def.stats){ player.stats[s]+=def.stats[s]; } }
       }
-      overlay.style.display="flex"; overlay.className="popup-overlay "+type;
-    }
-    function closePopup(){ document.getElementById("popupOverlay").style.display="none"; }
+    });
+    savePlayer(); updateStatsUI();
+  }
 
-    function getItemIcon(itemName){
-      const fileName=itemName.toLowerCase().replace(/\s+/g,"-")+".png";
-      return "images/"+fileName;
-    }
+  // Render Inventory
+  function renderInventory(){
+    let invList=document.getElementById("inventoryList");
+    invList.innerHTML="";
+    player.inventory.filter(i=>i.qty>0).forEach(i=>{
+      let iconPath=getItemIcon(i.item);
+      const def=ITEMS.find(it=>it.name===i.item);
+      const isEquipped=i.equipped?"Equipped":"";
+      invList.innerHTML+=`
+        <li class="inventory-row">
+          <span class="inv-qty">${i.qty}</span>
+          <img class="item-icon" src="${iconPath}" alt="${i.item}" onerror="this.src='images/item.png';">
+          <span class="inv-name">${i.item}</span>
+          ${i.equipped 
+            ? `<button class="btn red" onclick="unequipItem('${i.item}')">Unequip</button>` 
+            : (def&&def.slot?`<button class="btn green" onclick="equipItem('${i.item}')">Equip</button>`:"")}
+        </li>`;
+    });
+  }
 
-    function loadPlayer(){
-      const username=localStorage.getItem("lifeSim_currentUser");
-      if(!username){ window.location.href="index.html"; return; }
-      player=JSON.parse(localStorage.getItem("lifeSim_"+username))||{};
-      if(!player.inventory) player.inventory=[]; if(!player.money) player.money=0; if(!player.pfp) player.pfp="images/agent.png";
-      document.getElementById("playerName").innerText=player.username;
-      document.getElementById("money").innerText=formatNumber(player.money);
-      document.getElementById("overviewName").innerText=player.username;
-      document.getElementById("overviewMoney").innerText=formatNumber(player.money);
-      document.getElementById("pfp").src=player.pfp;
-      renderInventory();
-    }
+  // 💰 Add Money function for test button
+  function addMoney(amount){
+    player.money += amount;
+    savePlayer();
+    document.getElementById("money").innerText = formatNumber(player.money);
+    document.getElementById("overviewMoney").innerText = formatNumber(player.money);
+  }
 
-    function renderInventory(){
-      let invList=document.getElementById("inventoryList");
-      invList.innerHTML="";
-      player.inventory.filter(i=>i.qty>0).forEach(i=>{
-        let iconPath=getItemIcon(i.item);
-        invList.innerHTML+=`
-          <li class="inventory-row">
-            <span class="inv-qty">${i.qty}</span>
-            <img class="item-icon" src="${iconPath}" alt="${i.item}" onerror="this.src='images/item.png';">
-            <span class="inv-name">${i.item}</span>
-          </li>`;
-      });
-    }
+  function loadPlayer(){
+    const username=localStorage.getItem("lifeSim_currentUser");
+    if(!username){ window.location.href="index.html"; return;}
+    player=JSON.parse(localStorage.getItem("lifeSim_"+username))||{};
+    if(!player.inventory) player.inventory=[];
+    if(!player.money) player.money=0;
+    if(!player.pfp) player.pfp="images/agent.png";
+    if(!player.dungeonsDone) player.dungeonsDone=0;
+    if(!player.dungeonsFailed) player.dungeonsFailed=0;
+    if(!player.totalEarned) player.totalEarned=0;
+    if(!player.questsCompleted) player.questsCompleted=0;
+    if(!player.playerID) player.playerID=Array.from({length:10},()=>Math.floor(Math.random()*10)).join("");
+    if(!player.level) player.level=1;
+    if(!player.xp) player.xp=0;
+    if(!player.nextLevelXp) player.nextLevelXp=100;
+    if(!player.stats){ player.stats={health:100,mana:100,armor:0,slashRes:0,magicRes:0,projRes:0}; }
+    savePlayer();
+    document.getElementById("playerName").innerText=player.username;
+    document.getElementById("money").innerText=formatNumber(player.money);
+    document.getElementById("overviewName").innerText=player.username;
+    document.getElementById("overviewMoney").innerText=formatNumber(player.money);
+    document.getElementById("pfp").src=player.pfp;
+    document.getElementById("playerID").innerText=player.playerID;
+    document.getElementById("statDone").innerText=formatNumber(player.dungeonsDone);
+    document.getElementById("statFailed").innerText=formatNumber(player.dungeonsFailed);
+    document.getElementById("statEarned").innerText=formatNumber(player.totalEarned);
+    document.getElementById("statQuests").innerText=formatNumber(player.questsCompleted);
+    renderInventory(); updateStatsUI(); updateXPUI();
+  }
 
-    function startQuest(){
-      const questBtn=document.getElementById("questBtn"), questStatus=document.getElementById("questStatus");
-      questBtn.disabled=true; questBtn.innerText="⏳ Quest in Progress..."; questStatus.innerText="Adventuring...";
-      let dots=0;
-      const anim=setInterval(()=>{ dots=(dots+1)%4; questStatus.innerText="Adventuring"+".".repeat(dots);},500);
-      setTimeout(()=>{ clearInterval(anim);
-        const reward=Math.floor(Math.random()*50)+10;
-        player.money+=reward; savePlayer();
-        document.getElementById("money").innerText=formatNumber(player.money);
-        document.getElementById("overviewMoney").innerText=formatNumber(player.money);
-        showPopup(`✨ You earned ${formatNumber(reward)} money!`,"success");
-        questBtn.disabled=false; questBtn.innerText="⚔️ Embark on Quest";
-      },4000);
-    }
+  function savePlayer(){ if(player&&player.username) localStorage.setItem("lifeSim_"+player.username,JSON.stringify(player)); }
+  function showSection(id){ document.querySelectorAll(".section").forEach(sec=>sec.style.display="none"); document.getElementById(id).style.display="block"; }
+  function logout(){ localStorage.removeItem("lifeSim_currentUser"); window.location.href="index.html"; }
 
-    function showSection(id){ document.querySelectorAll(".section").forEach(sec=>sec.style.display="none"); document.getElementById(id).style.display="block"; }
-    function logout(){ localStorage.removeItem("lifeSim_currentUser"); window.location.href="index.html"; }
-    function savePlayer(){ localStorage.setItem("lifeSim_"+player.username,JSON.stringify(player)); }
-
-    loadPlayer();
-  </script>
+  loadPlayer();
+</script>
 </body>
 </html>
