--- a/dashboard.html
+++ b/dashboard.html
@@ -303,7 +303,7 @@
     if(!player.level) player.level=1;
     if(!player.xp) player.xp=0;
     if(!player.nextLevelXp) player.nextLevelXp=100;
-    if(!player.stats){ player.stats={health:100,mana:100,armor:0,slashRes:0,magicRes:0,projRes:0}; }
+    if(!player.stats){ player.stats={health:100,mana:100,armor:0,slashRes:0,magicRes:0,projRes:0,damage:0}; }
     savePlayer();
     document.getElementById("playerName").innerText=player.username;
     document.getElementById("money").innerText=formatNumber(player.money);
