--- a/dealers.html
+++ b/dealers.html
@@ -14,9 +14,9 @@
     <main class="store-main">
       <h1>Choose a Dealer</h1>
       <div class="dealer-list">
-        <div class="dealer-card" onclick="enterDealer('Dr. Bethenie')">
-          <img src="images/dr-bethenie.png" alt="Dr. Bethenie">
-          <h2>🧪 Dr. Bethenie</h2>
+        <div class="dealer-card" onclick="enterDealer('Dr. Bethanie')">
+          <img src="images/dr-bethanie.png" alt="Dr. Bethanie">
+          <h2>🧪 Dr. Bethanie</h2>
           <p>Potions and Medical Supplies</p>
         </div>
 
