--- a/dashboard.html
+++ b/dashboard.html
@@ -5,80 +5,6 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="game.css">
   <script src="items.js"></script>
-  <style>
-    .stats-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .stat-card {
-      background:#1e1e1e;
-      border:1px solid #333;
-      border-radius: 10px;
-      padding:15px;
-      text-align:center;
-    }
-    .stat-card h3 { margin:0 0 5px;color:#FFD700;}
-    .stat-card p { font-size:1.3em;font-weight:bold;margin:0;color:#eee;}
-    .player-id { font-size:1.3em;font-weight:bold;color:#e60000;margin-bottom:15px; }
-    #overview p { font-size:1.5em;font-weight:bold;margin:10px 0; }
-    #overviewName { color:#FFD700; }
-    #overviewMoney { color:#00cc00; }
-    #overview .money-icon { width:28px;height:28px;vertical-align:middle;margin-right:6px;}
-    .version-label { position:fixed;right:15px;bottom:10px;font-size:0.9em;color:#555;opacity:0.7;font-style:italic;}
-
-    .inventory-layout { display:flex; gap:20px; }
-    .inventory-left, .inventory-right {
-      flex:1; background:#1c1c1c; border:1px solid #333; border-radius:8px; padding:15px;
-    }
-    .inventory-left h2, .inventory-right h2 { color:#FFD700; margin-top:0; }
-    .inventory-stats ul { list-style:none; padding:0; margin:0; }
-    .inventory-stats li { margin:5px 0; font-weight:bold; color:#eee; }
-    .inventory-stats span { color:#00ccff; }
-
-    #xpBarOuter { background:#333;border-radius:6px;height:18px;margin-top:8px;}
-    #xpBarInner { background:#00ccff;height:100%;width:0%;border-radius:6px;transition:width 0.3s;}
-    #xpDisplay { font-size:0.9em; color:#ccc; }
-
-    /* ICON alignment polish + star fix */
-    .inventory-stats li {
-      display: flex;
-      align-items: center;
-      margin: 8px 0;
-    }
-    .inventory-stats li img.stat-icon,
-    .inventory-stats li #mana-icon {
-      width: 35px;
-      height: 35px;
-      flex-shrink: 0;
-      margin-right: 10px;
-      object-fit: contain;
-      display: block;
-    }
-    #mana-icon,
-    .stat-icon[src*="slash-resistance"] {
-      transform: scale(1.15);
-    }
-    .stat-icon[src*="armor"],
-    .stat-icon[src*="health"] {
-      transform: scale(0.9);
-    }
-    .inventory-stats li span {
-      margin-left: 4px;
-      color:#00ccff;
-      font-weight:bold;
-    }
-    .align-star {
-      width: 18px !important;
-      height: 18px !important;
-      margin-right: 5px;
-      flex-shrink: 0;
-      position: relative;
-      top: 2px;
-      transform: none !important;
-    }
-  </style>
 </head>
 <body>
 <div class="dashboard-layout">
@@ -90,7 +16,10 @@
       </div>
       <input type="file" id="pfpUpload" accept="image/*" style="display:none;" onchange="setPfp(event)">
       <h2 id="playerName"></h2>
-      <p><img class="money-icon" src="images/money.png"><span id="money"></span></p>
+      <p>
+        <img class="money-icon" src="images/money.png">
+        <span id="money"></span>
+      </p>
     </div>
     <nav class="menu">
       <button onclick="showSection('overview')">🏠 Overview</button>
@@ -128,13 +57,13 @@
           <h2>Stats</h2>
           <div class="inventory-stats">
             <ul>
-              <li><img src="images/health.png" class="stat-icon"> Health:<span id="statHealth">100</span></li>
-              <li><img id="mana-icon" src="images/mana.png" class="stat-icon"> Mana:<span id="statMana">100</span></li>
+              <li><img src="images/health.png" class="stat-icon"> Health: <span id="statHealth">100 / 100</span></li>
+              <li><img id="mana-icon" src="images/mana.png" class="stat-icon"> Mana: <span id="statMana">100 / 100</span></li>
               <li><img src="images/armor.png" class="stat-icon"> Armor: <span id="statArmor">0</span></li>
-              <li><img src="images/damage.png" class="stat-icon"> Damage: <span id="statDamage">0</span></li> <!-- NEW -->
+              <li><img src="images/damage.png" class="stat-icon"> Damage: <span id="statDamage">0</span></li>
               <li><img src="images/slash-resistance.png" class="stat-icon"> Slash Resistance: <span id="statSlash">0</span></li>
-              <li><img src="images/magic-resistance.png" class="stat-icon"> Magic Resistance:<span id="statMagic">0</span></li>
-              <li><img src="images/projectile-resistance.png" class="stat-icon"> Projectile Resistance:<span id="statProj">0</span></li>
+              <li><img src="images/magic-resistance.png" class="stat-icon"> Magic Resistance: <span id="statMagic">0</span></li>
+              <li><img src="images/projectile-resistance.png" class="stat-icon"> Projectile Resistance: <span id="statProj">0</span></li>
             </ul>
           </div>
           <div class="stat-card">
@@ -171,14 +100,14 @@
   </div>
 </div>
 
-<div class="version-label">v0.25</div>
+<div class="version-label">v0.3</div>
 
 <script>
   let player;
 
   function formatNumber(num){ return num.toLocaleString(); }
 
-  // Popups
+  // === POPUPS ===
   function showPopup(message,type="info"){
     const overlay=document.getElementById("popupOverlay"),
           msg=document.getElementById("popupMessage"),
@@ -196,12 +125,13 @@
   }
   function closePopup(){ document.getElementById("popupOverlay").style.display="none"; }
 
+  // === ITEM ICON HELPER ===
   function getItemIcon(itemName){
     const fileName=itemName.toLowerCase().replace(/\s+/g,"-")+".png";
     return "images/"+fileName;
   }
 
-  // XP + Levels
+  // === XP + LEVELS ===
   function addXP(amount){
     player.xp += amount;
     while(player.xp >= player.nextLevelXp){
@@ -214,26 +144,52 @@
   }
   function updateXPUI(){
     document.getElementById("statLevel").innerText=player.level;
-    document.getElementById("xpDisplay").innerText=`${player.xp} / ${player.nextLevelXp}`;
     const percent=Math.floor((player.xp/player.nextLevelXp)*100);
-    document.getElementById("xpBarInner").style.width=percent+"%";
+    document.getElementById("xpDisplay").innerText=`${player.xp} / ${player.nextLevelXp} XP (${percent}%)`;
+    const bar=document.getElementById("xpBarInner");
+    bar.style.width=percent+"%";
+    if(percent>=100){ bar.classList.add("full"); } 
+    else { bar.classList.remove("full"); }
   }
-  function updateStatsUI(){
-  document.getElementById("statHealth").innerText = player.stats.health;
-  document.getElementById("statMana").innerText   = player.stats.mana;
-  document.getElementById("statArmor").innerText  = player.stats.armor;
-  document.getElementById("statDamage").innerText = player.stats.damage; // ✅ NEW LINE
-  document.getElementById("statSlash").innerText  = player.stats.slashRes;
-  document.getElementById("statMagic").innerText  = player.stats.magicRes;
-  document.getElementById("statProj").innerText   = player.stats.projRes;
-}
 
-  // Equip & Unequip
+  // === HEAL & MANA RESTORE ===
+  function heal(amount){
+    if(player.stats.health >= player.stats.maxHealth){
+      showPopup("You are already at full Health!", "info");
+      return false; // signal: not used
+    }
+    player.stats.health = Math.min(player.stats.health + amount, player.stats.maxHealth);
+    savePlayer(); updateStatsUI();
+    showPopup(`You recovered ${amount} HP!`, "success");
+    return true; // signal: used
+  }
+  function restoreMana(amount){
+    if(player.stats.mana >= player.stats.maxMana){
+      showPopup("You are already at full Mana!", "info");
+      return false;
+    }
+    player.stats.mana = Math.min(player.stats.mana + amount, player.stats.maxMana);
+    savePlayer(); updateStatsUI();
+    showPopup(`You recovered ${amount} Mana!`, "success");
+    return true;
+  }
+
+  // === UPDATE STATS DISPLAY ===
+  function updateStatsUI(){
+    document.getElementById("statHealth").innerText = `${player.stats.health} / ${player.stats.maxHealth}`;
+    document.getElementById("statMana").innerText   = `${player.stats.mana} / ${player.stats.maxMana}`;
+    document.getElementById("statArmor").innerText  = player.stats.armor;
+    document.getElementById("statDamage").innerText = player.stats.damage;
+    document.getElementById("statSlash").innerText  = player.stats.slashRes;
+    document.getElementById("statMagic").innerText  = player.stats.magicRes;
+    document.getElementById("statProj").innerText   = player.stats.projRes;
+  }
+
+  // === EQUIPMENT ===
   function equipItem(itemName){
     const item=player.inventory.find(i=>i.item===itemName);
     const def=ITEMS.find(it=>it.name===itemName);
     if(!item||!def) return;
-    // Unequip old in same slot
     player.inventory.forEach(it=>{
       const d=ITEMS.find(dd=>dd.name===it.item);
       if(d&&d.slot===def.slot){ it.equipped=false; }
@@ -241,46 +197,89 @@
     item.equipped=true;
     savePlayer(); renderInventory(); updateStatsFromEquipment();
   }
-
   function unequipItem(itemName){
     const item=player.inventory.find(i=>i.item===itemName);
     if(!item) return;
     item.equipped=false;
     savePlayer(); renderInventory(); updateStatsFromEquipment();
   }
-
   function updateStatsFromEquipment(){
-    player.stats={health:100,mana:100,armor:0,slashRes:0,magicRes:0,projRes:0,damage:0};
+    const currentHP = player.stats.health;
+    const currentMana = player.stats.mana;
+    player.stats={
+      health:currentHP, maxHealth:100, 
+      mana:currentMana, maxMana:100, 
+      armor:0, slashRes:0, magicRes:0, projRes:0, damage:0
+    };
     player.inventory.forEach(it=>{
       if(it.equipped){
         const def=ITEMS.find(d=>d.name===it.item);
-        if(def&&def.stats){ for(let s in def.stats){ player.stats[s]+=def.stats[s]; } }
+        if(def&&def.stats){ 
+          for(let s in def.stats){ 
+            if(s === "maxHealth"){ player.stats.maxHealth += def.stats[s]; }
+            else if(s === "maxMana"){ player.stats.maxMana += def.stats[s]; }
+            else { player.stats[s] += def.stats[s]; }
+          }
+        }
       }
     });
+    player.stats.health = Math.min(player.stats.health, player.stats.maxHealth);
+    player.stats.mana   = Math.min(player.stats.mana, player.stats.maxMana);
     savePlayer(); updateStatsUI();
   }
 
-  // Render Inventory
+  // === INVENTORY RENDER WITH USE OPTION ===
   function renderInventory(){
     let invList=document.getElementById("inventoryList");
     invList.innerHTML="";
     player.inventory.filter(i=>i.qty>0).forEach(i=>{
       let iconPath=getItemIcon(i.item);
       const def=ITEMS.find(it=>it.name===i.item);
-      const isEquipped=i.equipped?"Equipped":"";
+      const equippedClass=i.equipped?"equipped":"";
+      const statsPreview = def?.stats
+        ? Object.entries(def.stats).map(([k,v]) => `${k}: +${v}`).join(", ")
+        : "";
+
+      let actionButton = "";
+      if(def?.type === "consumable"){
+        actionButton = `<button class="btn gold" onclick="useItem('${i.item}')">Use</button>`;
+      } else if(i.equipped){
+        actionButton = `<button class="btn red" onclick="unequipItem('${i.item}')">Unequip</button>`;
+      } else if(def?.slot){ 
+        actionButton = `<button class="btn green" onclick="equipItem('${i.item}')">Equip</button>`;
+      }
+
       invList.innerHTML+=`
-        <li class="inventory-row">
+        <li class="inventory-row ${equippedClass}" title="${statsPreview}">
           <span class="inv-qty">${i.qty}</span>
           <img class="item-icon" src="${iconPath}" alt="${i.item}" onerror="this.src='images/item.png';">
           <span class="inv-name">${i.item}</span>
-          ${i.equipped 
-            ? `<button class="btn red" onclick="unequipItem('${i.item}')">Unequip</button>` 
-            : (def&&def.slot?`<button class="btn green" onclick="equipItem('${i.item}')">Equip</button>`:"")}
+          ${actionButton}
         </li>`;
     });
   }
 
-  // 💰 Add Money function for test button
+  // === USE ITEM ===
+  function useItem(itemName){
+    const invItem = player.inventory.find(i => i.item === itemName);
+    const def = ITEMS.find(it => it.name === itemName);
+    if(!invItem || !def || !def.use) return;
+
+    // call the item’s effect
+    const wasUsed = def.use();
+
+    // only deduct if actually used
+    if(wasUsed){
+      invItem.qty--;
+      if(invItem.qty <= 0){
+        player.inventory = player.inventory.filter(i=>i.item !== itemName);
+      }
+      savePlayer();
+      renderInventory();
+    }
+  }
+
+  // === MONEY ===
   function addMoney(amount){
     player.money += amount;
     savePlayer();
@@ -288,10 +287,13 @@
     document.getElementById("overviewMoney").innerText = formatNumber(player.money);
   }
 
+  // === LOAD/SAVE ===
   function loadPlayer(){
     const username=localStorage.getItem("lifeSim_currentUser");
     if(!username){ window.location.href="index.html"; return;}
     player=JSON.parse(localStorage.getItem("lifeSim_"+username))||{};
+
+    // Defaults
     if(!player.inventory) player.inventory=[];
     if(!player.money) player.money=0;
     if(!player.pfp) player.pfp="images/agent.png";
@@ -303,8 +305,15 @@
     if(!player.level) player.level=1;
     if(!player.xp) player.xp=0;
     if(!player.nextLevelXp) player.nextLevelXp=100;
-    if(!player.stats){ player.stats={health:100,mana:100,armor:0,slashRes:0,magicRes:0,projRes:0,damage:0}; }
+    if(!player.stats){ 
+      player.stats={
+        health:100, maxHealth:100, 
+        mana:100, maxMana:100, 
+        armor:0, slashRes:0, magicRes:0, projRes:0, damage:0
+      }; 
+    }
     savePlayer();
+
     document.getElementById("playerName").innerText=player.username;
     document.getElementById("money").innerText=formatNumber(player.money);
     document.getElementById("overviewName").innerText=player.username;
@@ -315,6 +324,7 @@
     document.getElementById("statFailed").innerText=formatNumber(player.dungeonsFailed);
     document.getElementById("statEarned").innerText=formatNumber(player.totalEarned);
     document.getElementById("statQuests").innerText=formatNumber(player.questsCompleted);
+
     renderInventory(); updateStatsUI(); updateXPUI();
   }
 
